Cleanup unused code