@@ -16,7 +16,6 @@
  */
 package com.wazuh.contentmanager;
 
-import com.wazuh.contentmanager.action.cti.GetCatalogAction;
 import org.opensearch.client.Client;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.node.DiscoveryNode;
@@ -43,12 +42,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
-import com.wazuh.contentmanager.index.ContentIndex;
-import com.wazuh.contentmanager.index.ContextIndex;
-import com.wazuh.contentmanager.rest.CatalogHandler;
-import com.wazuh.contentmanager.rest.ChangesHandler;
-import com.wazuh.contentmanager.rest.RestPostContentManager;
-import com.wazuh.contentmanager.rest.RestPostContextAction;
+import com.wazuh.contentmanager.client.CTIClient;
+import com.wazuh.contentmanager.index.CatalogIndex;
 import com.wazuh.contentmanager.settings.PluginSettings;
 
 public class ContentManagerPlugin extends Plugin implements ClusterPlugin, ActionPlugin {
@@ -56,8 +51,7 @@ public class ContentManagerPlugin extends Plugin implements ClusterPlugin, Actio
     public static final String CONTEXT_NAME = "vd_1.0.0";
     public static final String CONSUMER_NAME = "vd_4.8.0";
 
-    private ContextIndex contextIndex;
-    private ContentIndex contentIndex;
+    private CatalogIndex catalogIndex;
 
     /** ClassConstructor * */
     public ContentManagerPlugin() {}
@@ -75,11 +69,10 @@ public class ContentManagerPlugin extends Plugin implements ClusterPlugin, Actio
             NamedWriteableRegistry namedWriteableRegistry,
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<RepositoriesService> repositoriesServiceSupplier) {
-        this.contentIndex = new ContentIndex(client, clusterService, threadPool);
-        this.contextIndex = new ContextIndex(client, clusterService, threadPool);
+        this.catalogIndex = new CatalogIndex(client);
 
         PluginSettings.getInstance(environment.settings(), clusterService);
-        return List.of(this.contentIndex, this.contextIndex);
+        return List.of(this.changesIndex, this.catalogIndex);
     }
 
     @Override
@@ -92,16 +85,12 @@ public class ContentManagerPlugin extends Plugin implements ClusterPlugin, Actio
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<DiscoveryNodes> nodesInCluster) {
         // Just for testing purposes
-        return List.of(
-                new RestPostContextAction(this.contextIndex),
-                new RestPostContentManager(this.contentIndex),
-                new CatalogHandler(),
-                new ChangesHandler());
+        return Collections.emptyList();
     }
 
     @Override
     public void onNodeStarted(DiscoveryNode localNode) {
-        GetCatalogAction.run();
+        CTIClient.getInstance().getCatalog();
     }
 
     /**
